--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/slate.css">
+
 	<title>Psychic</title>
 </head>
 <style type="text/css">
@@ -20,13 +20,13 @@
 
 		<br>
 
-		<h3 class="row">
-			Guess what letter I'm thinking of
-		</h3>
+		<h1>
+			Can you guess the letter I'm thinking of?
+		</h1>
 
 		<br>
 
-		<div class="wins row well">
+  	<div class="wins row well">
 			Wins:
 		</div>
 
